--- a/wiki.html
+++ b/wiki.html
@@ -1,13 +1,93 @@
-<!DOCTYPE>
-<html>
-<body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../../favicon.ico">
 
-<link href="wiki.css" type="text/css" rel="stylesheet">
+    <title>Jumbotron Template for Bootstrap</title>
 
-<form action="index.html">
-    <input type="submit" value="Back to Website">
-</form>
+    <!-- Bootstrap core CSS -->
+ <link href="css/bootstrap.min.css" rel="stylesheet">
 
+    <!-- Custom styles for this template -->
+    <link href="jumbotron.css" rel="stylesheet">
+
+    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+
+  <body>
+    <!-- NAVIGATION BAR ON TOP BOOTSTRAP -->    
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          
+<!-- Navigationbar verschiedene Reiter  -->
+  <div class="collapse navbar-collapse" id="navHeaderCollapse">
+    <ul class="nav navbar-nav">
+    <!-- WILLKOMMEN -->
+    <li aria-label="Willkommen"><a href="index.html">Willkommen <span class="sr-only">(current)</span></a></li>
+      <!--  add links as dropdown-meue -->
+      <li class="dropdown">
+        <!-- add dropdown name and arrow--> 
+        <!-- ABOUT -->
+        <a href="about.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" >About<em class="caret"></em></a>
+          <ul class="dropdown-menu" role="menu">
+            <li aria-label="Me"><a href="about.html#Ich">...das bin ich.</a></li>
+            <li aria-label="THM"><a href="about.html#THM Gießen">THM Gießen</a></li>
+            <li aria-label="Karte"><a href="about.html#Map">Karte</a></li>
+          </ul>
+      </li> <!-- ende dropdown -->
+
+      <li class="dropdown"> <!-- DAS STUIDUM -->
+        <!-- add dropdown name and arrow--> 
+        <a href="studium.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" >Das Studium<em class="caret"></em></a>
+          <ul class="dropdown-menu" role="menu">
+            <li aria-label="Me"><a href="studium.html#Kurse" >Kurse im WS15/16</a></li>
+            <li aria-label="THM"><a href="studium.html#Modulplan" >Modulplan</a></li>
+          </ul>
+      </li> <!-- ende dropdown -->
+
+    <!-- WIKI-->
+    <li aria-label="Suchformular"><a href="wiki.html" >Wikipedia Suchformular</a></li>  <!-- WIKI-->
+    <!-- CODECADEMY-->    
+    <li class="active" aria-label="CodeCademy Achievements"><a href="codecademy.html">Codecademy Achievements</a></li>
+    <!-- IMPRESSUM-->
+    <li aria-label="Impressum"><a href="impressum.html" >Impressum</a></li>   <!-- IMPRESSUM -->      
+      </ul>
+    </div>
+  </div>
+</nav>
+
+
+    <!-- Main jumbotron for a primary marketing message or call to action -->
+    <div class="jumbotron">
+      <div class="container">
+        <h1>Wikipedia Suchformular</h1>
+        
+    </div>
+    </div>
+
+<div class="container"  
+ 
 
 
 <section role="search">
@@ -40,3 +120,25 @@
 
 </class>
 </body></html>
+
+
+
+    </div>
+      <hr>
+
+      <footer>
+        <p>&copy; Company 2014</p>
+      </footer>
+    </div> <!-- /container -->
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="../../dist/js/bootstrap.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+  </body>
+</html>
+
