--- a/wiki.html
+++ b/wiki.html
@@ -94,7 +94,7 @@
 		<div class="container">
 			<form action="http://de.wikipedia.org/wiki/Spezial:Suche" target="_blank" id="searchForm">
 		  		
-		    		<legend><a target="_blank" href="http://de.wikipedia.org/wiki/Hauptseite"></a>Wikipediasuche</legend>
+		    		<legend>Wikipediasuche</legend>
 		    		<label for="search">Suchbegriff:</label>
 		    		<input  type="text" class="searchbar" name="search" id="search" value="" required/>
 		    		<span class="input-group-btn"></br>
