--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
+
+
     <title>Mein Studium an der THM Gießen</title>
 
     <!-- Bootstrap core CSS -->
@@ -46,28 +48,15 @@
 		<!-- WILLKOMMEN -->
 		<li class="active" aria-label="Willkommen"><a href="index.html">Willkommen <span class="sr-only">(current)</span></a></li>
 			<!--  add links as dropdown-meue -->
-			<li class="dropdown">
-				<!-- add dropdown name and arrow--> 
-				<!-- ABOUT -->
-				<a href="about.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" >About<em class="caret"></em></a>
-					<ul class="dropdown-menu" role="menu">
-						<li aria-label="Me"><a href="about.html#Ich">...das bin ich.</a></li>
-						<li aria-label="THM"><a href="about.html#THM Gießen">THM Gießen</a></li>
-            <li aria-label="Karte"><a href="about.html#Map">Karte</a></li>
-					</ul>
-			</li>	<!-- ende dropdown -->
+			<li aria-label="About"><a href="about.html" >About</a></li>
 
-			<li class="dropdown">	<!-- DAS STUIDUM -->
-				<!-- add dropdown name and arrow--> 
-				<a href="studium.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" >Das Studium<em class="caret"></em></a>
-					<ul class="dropdown-menu" role="menu">
-						<li aria-label="Me"><a href="studium.html#Kurse" >Kurse im WS15/16</a></li>
-						<li aria-label="THM"><a href="studium.html#Modulplan" >Modulplan</a></li>
-					</ul>
-			</li>	<!-- ende dropdown -->
+			<li aria-label="Studium"><a href="studium.html" >Das Studium</a></li>
 
 		<!-- WIKI-->
-		<li aria-label="Suchformular"><a href="wiki.html" >Wikipedia Suchformular</a></li>	<!-- WIKI-->
+		<li aria-label="Wiki"><a href="wiki.html" >Wikipedia Suchformular</a></li>	<!-- WIKI-->
+
+          <li aria-label="Requests"><a href="requests.html" >Pull-Requests</a></li>   <!-- REQUESTS -->      
+
 		<!-- CODECADEMY-->		
 		<li aria-label="CodeCademy Achievements"><a href="codecademy.html">Codecademy Achievements</a></li>
 		<!-- IMPRESSUM-->
@@ -92,17 +81,17 @@
       <div class="row">
         <div class="col-md-4">
           <h2>THM Gießen</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <p>Hessens größte Fachhochschule und die viertgrößte von Deutschland.</p>
           <p><a class="btn btn-default" href="about.html#THM Gießen" role="button">Erfahre mehr... &raquo;</a></p>
         </div>
         <div class="col-md-4">
           <h2>Kurse</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <p>Diese Veranstaltungen aus Semester 1, 2 und 3 besuche ich in diesem Semester.</p>
           <p><a class="btn btn-default" href="studium.html#Kurse" role="button">Interessiert?! &raquo;</a></p>
        </div>
         <div class="col-md-4">
           <h2>Codecademy</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+          <p>Online bei codecademy kostenlose Programmierkurse absolvieren und Badges sammeln...</p>
           <p><a class="btn btn-default" href="codecademy.html" role="button">Für Fortsetzung klicken... &raquo;</a></p>
         </div>
       </div>
@@ -110,7 +99,7 @@
       <hr>
 
       <footer>
-        <p>&copy; Company 2014</p>
+        
       </footer>
     </div> <!-- /container -->
 
