--- a/about.html
+++ b/about.html
@@ -9,10 +9,10 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Jumbotron Template for Bootstrap</title>
+    <title>Mein Studium an der THM Gießen</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="jumbotron.css" rel="stylesheet">
@@ -42,41 +42,26 @@
           
 <!-- Navigationbar verschiedene Reiter  -->
 	<div class="collapse navbar-collapse" id="navHeaderCollapse">
-		<ul class="nav navbar-nav">
-		<!-- WILLKOMMEN -->
-		<li aria-label="Willkommen"><a href="index.html">Willkommen <span class="sr-only">(current)</span></a></li>
-			<!--  add links as dropdown-meue -->
-			<li class="dropdown">
-				<!-- add dropdown name and arrow--> 
-				<!-- ABOUT -->
-				<li class="active"><a href="about.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" >About<em class="caret"></em></a>
-					<ul class="dropdown-menu" role="menu">
-            <li aria-label="Me"><a href="about.html#Ich">...das bin ich.</a></li>
-            <li aria-label="THM"><a href="about.html#THM Gießen">THM Gießen</a></li>
-            <li aria-label="Karte"><a href="about.html#Map">Karte</a></li>
-					</ul></li>
-			</li>	<!-- ende dropdown -->
+    <ul class="nav navbar-nav">
+    <!-- WILLKOMMEN -->
+    <li aria-label="Willkommen"><a href="index.html">Willkommen <span class="sr-only">(current)</span></a></li>
+      <!--  add links as dropdown-meue -->
+      <li class="active" aria-label="About"><a href="about.html" >About</a></li>
 
-			<li class="dropdown">	<!-- DAS STUIDUM -->
-				<!-- add dropdown name and arrow--> 
-				<a href="studium.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" >Das Studium<em class="caret"></em></a>
-					<ul class="dropdown-menu" role="menu">
-						<li aria-label="Me"><a href="studium.html#Kurse" >Kurse im WS15/16</a></li>
-            <li aria-label="THM"><a href="studium.html#Modulplan" >Modulplan</a></li>
-					</ul>
-			</li>	<!-- ende dropdown -->
+      <li aria-label="Studium"><a href="studium.html" >Das Studium</a></li>
 
-		<!-- WIKI-->
-		<li aria-label="Suchformular"><a href="wiki.html" >Wikipedia Suchformular</a></li>	<!-- WIKI-->
-		<!-- CODECADEMY-->		
-		<li aria-label="CodeCademy Achievements"><a href="codecademy.html">Codecademy Achievements</a></li>
-		<!-- IMPRESSUM-->
-		<li aria-label="Impressum"><a href="impressum.html" >Impressum</a></li>		<!-- IMPRESSUM -->			
-			</ul>
-		</div>
-	</div>
+    <!-- WIKI-->
+    <li aria-label="Suchformular"><a href="wiki.html" >Wikipedia Suchformular</a></li>  <!-- WIKI-->
+          <li aria-label="Requests"><a href="requests.html" >Pull-Requests</a></li>   <!-- REQUESTS -->      
+
+    <!-- CODECADEMY-->    
+    <li aria-label="CodeCademy Achievements"><a href="codecademy.html">Codecademy Achievements</a></li>
+    <!-- IMPRESSUM-->
+    <li aria-label="Impressum"><a href="impressum.html" >Impressum</a></li>   <!-- IMPRESSUM -->      
+      </ul>
+    </div>
+  </div>
 </nav>
-
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
@@ -87,10 +72,10 @@
     <div class="container">
     <p id="Ich"></br></p>
 
-    <h1>...das bin ich.</h1> <p> ein Verweis zur zweiten Überschrift innerhalb dieser Seite<br>  Verweis zu einem Ziel in einer anderen SeiteDonec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.  </p>     <p id="THM Gießen"></br></p>
+    <h1>...das bin ich.</h1> <p> Mein Name ist Linda Fabian und ich studiere seit dem Wintersemester 2015/16 an der THM Gießen. Ich bin 23 Jahre alt und wohne erst seit September 2015 in Gießen. Ursprünglich komme ich aus Siegen. Ich bin ein Quereinsteiger, da ich von der TU Darmstadt zur THM gewechselt habe. In diesem Semester höre ich Veranstaltung aus dem ersten, zweiten und drittem Semester, daher ist mein Semesterplan wahrscheinlich nicht sehr representativ...</p>     <p id="THM Gießen"></br></p>
 <h1>THM Gießen</h1>
-    <p>ein Verweis zu einem Ziel in einer anderen SeiteDonec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
-    <p id="Map"></br></p>
+    <p>Die THM Gießen ist einer der drei Standorte der Technischen Hochschule Mittelhessen. Es handelt sich dabei um eine Fachhochschule. Der Fachbereich Mathematik, Naturwissenschaften, Informatik (kurz: MNI) bietet viele verschiedene Studiengänge um den Schwerpunkt Informatik an. Ich habe mich dabei für die "reine Informatik" entschieden...</p>
+   <p id="Map"></br></p>
     <h1>Karte</h1>
     <div style="width: 600px"><iframe width="600" height="500" src="http://regiohelden.de/google-maps/map.php?width=600&amp;height=500&amp;hl=de&amp;q=Wiesenstra%C3%9Fe%2014%20Gie%C3%9Fen+(THM%20Gie%C3%9Fen)&amp;ie=UTF8&amp;t=&amp;z=16&amp;iwloc=A&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"><a style="font-size: 9px;" href="http://www.regiohelden.de/google-maps/" style="font-size: 9px;">Google Maps Generator</a> by <a href="http://www.regiohelden.de/">RegioHelden</a></iframe><br /><span style="font-size: 9px;"><a style="font-size: 9px;" href="http://www.regiohelden.de/google-maps/" style="font-size: 9px;">Google Maps Generator</a> by <a href="http://www.regiohelden.de/" style="font-size: 9px;">RegioHelden</a></span></div>
 
@@ -98,7 +83,6 @@
       <hr>
 
       <footer>
-        <p>&copy; Company 2014</p>
       </footer>
     </div> <!-- /container -->
 
