--- a/impressum.html
+++ b/impressum.html
@@ -9,10 +9,10 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Jumbotron Template for Bootstrap</title>
+    <title>Mein Studium an der THM Gießen</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="jumbotron.css" rel="stylesheet">
@@ -39,35 +39,20 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          
-<!-- Navigationbar verschiedene Reiter  -->
-  <div class="collapse navbar-collapse" id="navHeaderCollapse">
+    <!-- NAVIGATION BAR ON TOP BOOTSTRAP -->    
+    <div class="collapse navbar-collapse" id="navHeaderCollapse">
     <ul class="nav navbar-nav">
     <!-- WILLKOMMEN -->
     <li aria-label="Willkommen"><a href="index.html">Willkommen <span class="sr-only">(current)</span></a></li>
       <!--  add links as dropdown-meue -->
-      <li class="dropdown">
-        <!-- add dropdown name and arrow--> 
-        <!-- ABOUT -->
-        <a href="about.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" >About<em class="caret"></em></a>
-          <ul class="dropdown-menu" role="menu">
-			<li aria-label="Me"><a href="about.html#Ich">...das bin ich.</a></li>
-			<li aria-label="THM"><a href="about.html#THM Gießen">THM Gießen</a></li>
-            <li aria-label="Karte"><a href="about.html#Map">Karte</a></li>
-          </ul>
-      </li> <!-- ende dropdown -->
+      <li aria-label="About"><a href="about.html" >About</a></li>
 
-      <li class="dropdown"> <!-- DAS STUIDUM -->
-        <!-- add dropdown name and arrow--> 
-        <a href="studium.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" >Das Studium<em class="caret"></em></a>
-          <ul class="dropdown-menu" role="menu">
-				<li aria-label="Me"><a href="studium.html#Kurse" >Kurse im WS15/16</a></li>
-				<li aria-label="THM"><a href="studium.html#Modulplan" >Modulplan</a></li>
-          </ul>
-      </li> <!-- ende dropdown -->
+      <li aria-label="Studium"><a href="studium.html" >Das Studium</a></li>
 
     <!-- WIKI-->
     <li aria-label="Suchformular"><a href="wiki.html" >Wikipedia Suchformular</a></li>  <!-- WIKI-->
+          <li aria-label="Requests"><a href="requests.html" >Pull-Requests</a></li>   <!-- REQUESTS -->      
+
     <!-- CODECADEMY-->    
     <li aria-label="CodeCademy Achievements"><a href="codecademy.html">Codecademy Achievements</a></li>
     <!-- IMPRESSUM-->
@@ -90,8 +75,10 @@
     <h2>Angaben gem&auml;&szlig; &sect; 5 TMG:</h2> <p>Linda Fabian<br/>
 Rodheimer Stra&szlig;e 30<br/> 35398 Gießen </p> <h2>Kontakt:</h2> <table><tr>
 <td>E-Mail: linda.fabian@mni.thm.de</td> </tr></table> <h2>Quellenangaben f&uuml;r die
-verwendeten Bilder und Grafiken:</h2> <p><a href="https://www.mni.th-mittelhessen.de/" >https://www.mni.th-
+verwendeten Bilder und Grafiken:</h2> 
+<p><a href="https://www.mni.th-mittelhessen.de/" target="_blank">https://www.mni.th-
 mittelhessen.de/</a></p>
+<p><a href="https://www.codecademy.com/" target="_blank">https://www.codecademy.com</a></p>
 
 <h2>Datenschutzerkl&auml;rung:</h2> <p><strong>Datenschutz</strong></p> <p>Die Betreiber dieser
 Seiten nehmen den Schutz Ihrer pers&ouml;nlichen Daten sehr ernst. Wir behandeln Ihre personenbezogenen
@@ -104,7 +91,6 @@ Basis. Diese Daten werden ohne Ihre ausdr&uuml;ckliche Zustimmung nicht an Dritt
 Sicherheitsl&uuml;cken aufweisen kann. Ein l&uuml;ckenloser Schutz der Daten vor dem Zugriff durch Dritte ist
 nicht m&ouml;glich.</p><p>&nbsp;</p>
 	 <footer>
-        <p>&copy; Company 2014</p>
       </footer>
 	</div>
 
