Vorschlag zu E-Mail

--- a/impressum.html
+++ b/impressum.html
@@ -29,7 +29,7 @@
   </head>
 
   <body>
-    <!-- NAVIGATION BAR ON TOP BOOTSTRAP -->    
+    <!-- NAVIGATION BAR ON TOP BOOTSTRAP -->
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -39,7 +39,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-    <!-- NAVIGATION BAR ON TOP BOOTSTRAP -->    
+    <!-- NAVIGATION BAR ON TOP BOOTSTRAP -->
     <div class="collapse navbar-collapse" id="navHeaderCollapse">
     <ul class="nav navbar-nav">
     <!-- WILLKOMMEN -->
@@ -51,12 +51,12 @@
 
     <!-- WIKI-->
     <li aria-label="Suchformular"><a href="wiki.html" >Wikipedia Suchformular</a></li>  <!-- WIKI-->
-          <li aria-label="Requests"><a href="requests.html" >Pull-Requests</a></li>   <!-- REQUESTS -->      
+          <li aria-label="Requests"><a href="requests.html" >Pull-Requests</a></li>   <!-- REQUESTS -->
 
-    <!-- CODECADEMY-->    
+    <!-- CODECADEMY-->
     <li aria-label="CodeCademy Achievements"><a href="codecademy.html">Codecademy Achievements</a></li>
     <!-- IMPRESSUM-->
-    <li class="active" aria-label="Impressum"><a href="impressum.html" >Impressum</a></li>   <!-- IMPRESSUM -->      
+    <li class="active" aria-label="Impressum"><a href="impressum.html" >Impressum</a></li>   <!-- IMPRESSUM -->
       </ul>
     </div>
   </div>
@@ -74,8 +74,8 @@
     <!-- IMPRESSUM -->
     <h2>Angaben gem&auml;&szlig; &sect; 5 TMG:</h2> <p>Linda Fabian<br/>
 Rodheimer Stra&szlig;e 30<br/> 35398 Gießen </p> <h2>Kontakt:</h2> <table><tr>
-<td>E-Mail: linda.fabian@mni.thm.de</td> </tr></table> <h2>Quellenangaben f&uuml;r die
-verwendeten Bilder und Grafiken:</h2> 
+<td><a href="email_handler.php" name="E-Mail">E-Mail: linda.fabian(at)mni.thm.de</a></td> </tr></table> <h2>Quellenangaben f&uuml;r die
+verwendeten Bilder und Grafiken:</h2>
 <p><a href="https://www.mni.th-mittelhessen.de/" target="_blank">https://www.mni.th-
 mittelhessen.de/</a></p>
 <p><a href="https://www.codecademy.com/" target="_blank">https://www.codecademy.com</a></p>
@@ -101,7 +101,7 @@ nicht m&ouml;glich.</p><p>&nbsp;</p>
 
       <hr>
 
-      
+
     </div> <!-- /container -->
 
 
