rechtschreibfehler index und codecademy

--- a/codecademy.html
+++ b/codecademy.html
@@ -68,7 +68,7 @@
     <div class="jumbotron">
       <div class="container">
         <h1>Codecademy Achievements</h1>
-        <p>Bei CodeCademy handelt es sich um eine Website, die es ermöglicht online verschiedene (Programmier)kurse zu absolvieren. Hier präsentiere ich meine <a href="https://www.codecademy.com/lindafb#completed" target="_blank">gesammelten Badges.</a> Mann mann mann, bin ich stolz.</p>
+        <p>Bei CodeCademy handelt es sich um eine Website, die es ermöglicht online verschiedene (Programmier)kurse zu absolvieren. Hier präsentiere ich meine <a href="https://www.codecademy.com/lindafb#completed" target="_blank">gesammelten Badges.</a></p>
     </div>
     </div>
 
