--- a/impressum.html
+++ b/impressum.html
@@ -74,7 +74,7 @@
     <!-- IMPRESSUM -->
     <h2>Angaben gem&auml;&szlig; &sect; 5 TMG:</h2> <p>Linda Fabian<br/>
 Rodheimer Stra&szlig;e 30<br/> 35398 Gießen </p> <h2>Kontakt:</h2> <table><tr>
-<td><a href="email_handler.php" name="E-Mail">E-Mail: linda.fabian(at)mni.thm.de</a></td> </tr></table> <h2>Quellenangaben f&uuml;r die
+<td><a href="email_handler.php" target="_blank" name="E-Mail">E-Mail: linda.fabian(at)mni.thm.de</a></td> </tr></table> <h2>Quellenangaben f&uuml;r die
 verwendeten Bilder und Grafiken:</h2>
 <p><a href="https://www.mni.th-mittelhessen.de/" target="_blank">https://www.mni.th-
 mittelhessen.de/</a></p>
