--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div class="jumbotron">
       <div class="container">
         <h1>Mein Studium an der THM Gießen</h1>
-        <p>Auf dieser Seite stelle ich mein bisheriges Studium an der Technischen Hochschule Mittelhessen Standort Gießen vor. Da ich erst seit Mitte Oktober 2015 hier studiere, spiegelt diese Seite die Ansicht eines THM Quereinsteiger wider...</p>
+        <p>Auf dieser Seite stelle ich mein bisheriges Studium an der Technischen Hochschule Mittelhessen Standort Gießen vor. Da ich erst seit Mitte Oktober 2015 hier studiere, spiegelt diese Seite die Ansicht eines THM Quereinsteigers wider...</p>
         <p><a class="btn btn-success btn-lg" href="about.html" role="button">About  &raquo;</a></p>
     </div>
     </div>
