--- a/studium.html
+++ b/studium.html
@@ -11,8 +11,15 @@
 
     <title>Mein Studium an der THM Gießen</title>
 
-     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+   <!-- einbinden von Bootstrap per CDN-->
+
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
+
+
 
     <!-- Custom styles for this template -->
     <link href="jumbotron.css" rel="stylesheet">
