--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
 
 		<!-- CODECADEMY-->		
 		<li aria-label="CodeCademy Achievements"><a href="codecademy.html">Codecademy Achievements</a></li>
+
+		<!-- Arsnova-->		
+		<li aria-label="Arsnova Statistik"><a href="arsnova.html">Arsnova Statistik</a></li>
+
 		<!-- IMPRESSUM-->
 		<li aria-label="Impressum"><a href="impressum.html" >Impressum</a></li>		<!-- IMPRESSUM -->			
 			</ul>
