--- a/codecademy.html
+++ b/codecademy.html
@@ -64,6 +64,10 @@
 
     <!-- CODECADEMY-->    
     <li class="active" aria-label="CodeCademy Achievements"><a href="codecademy.html">Codecademy Achievements</a></li>
+    
+    <!-- Arsnova-->   
+    <li aria-label="Arsnova Statistik"><a href="arsnova.html">Arsnova Statistik</a></li>
+
     <!-- IMPRESSUM-->
     <li aria-label="Impressum"><a href="impressum.html" >Impressum</a></li>   <!-- IMPRESSUM -->      
       </ul>
