--- a/arsnova.html
+++ b/arsnova.html
@@ -96,6 +96,7 @@ function doit()
 <div>
 <p1> Abfrage</p1>
 <input type="button" value="hello" onclick="doit();">
+<p>Es sollte sich etwas tun</p>
 <script language="javascript" type="text/javascript">
 <!--
 var xmlHttpObject = new XMLHttpRequest();
