nur noch ein request

--- a/arsnova.html
+++ b/arsnova.html
@@ -94,12 +94,9 @@ function doit()
     </div>
     </div>
 <div>
-<p1> Abfrage</p1>
-<input type="button" value="hello" onclick="doit();">
-<p>Es sollte sich etwas tun</p>
-<h2>AJAX</h2>
+<h2>Request</h2>
 
-<button type="button" onclick="loadDoc()">Request data</button>
+<button type="button" onclick="loadDoc()">Get Statistik</button>
 
 <p id="demo"></p>
 
@@ -116,12 +113,7 @@ function loadDoc() {
   xhttp.send();
 }
 </script>
-<script language="javascript" type="text/javascript">
-<!--
-var xmlHttpObject = new XMLHttpRequest();
-open(post, https://arsnova.eu/api/statistics/)
--->
-</script> 
+
 </div>
 
 
